bk_ida/gccida/g0/lex_number
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1303:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1304:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1306:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1307:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1308:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1309:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1310:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1311:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1312:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1315:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1316:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1342:12: error: expected expression
lex_number::anon1 floatflag; // [rsp+124h] [rbp-3Ch] 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1359:1: error: use of undeclared identifier 'floatflag'
floatflag = NOT_FLOAT; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1359:13: error: use of undeclared identifier 'NOT_FLOAT'
floatflag = NOT_FLOAT; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1376:28: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
else if ( *stra == 48 && ( sch_istable[*( ( unsigned __int8 *)stra + 1)] & 4) != 0 ) 
                           ^~~~~~~~~~~
                           _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1387:6: error: use of undeclared identifier 'floatflag'
if ( floatflag == AFTER_POINT ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1387:19: error: use of undeclared identifier 'AFTER_POINT'
if ( floatflag == AFTER_POINT ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1392:6: error: use of undeclared identifier 'floatflag'
if ( floatflag == AFTER_EXPON ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/c-lex.c:1392:19: error: use of undeclared identifier 'AFTER_EXPON'
if ( floatflag == AFTER_EXPON ) 
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lex_number/src/obj/c-lex.o] Error 1
